# gt_harness

./: .gitignore  CLAUDE_REBUILD_BRIEF.md  README.md  app.py  requirements.txt
docs/: Architecture.md  Environment-Variables.md  Getting-Started.md  Home.md  Models-and-Downloads.md  Proof-Plots.md  Troubleshooting.md  User-Interfaces.md  _Sidebar.md
gt_simple/: README.md  app.py  requirements.txt
gt_simple/knowledge/: gt_overview.md  process_map_cold_spot.md  process_map_combustion_dynamics.md  process_map_exhaust_spread.md  process_map_hets_trip.md  process_map_vibration.md
knowledge/: gt_overview.md  process_map_cold_spot.md  process_map_combustion_dynamics.md  process_map_exhaust_spread.md  process_map_hets_trip.md  process_map_vibration.md
models/: README.md
samples/: SCENARIO_README.md  gt_sensors_demo.csv
samples/cold_spot/: cold_spot_01.csv  cold_spot_02.csv  cold_spot_03.csv  cold_spot_04.csv  cold_spot_05.csv  cold_spot_06.csv  cold_spot_07.csv  cold_spot_08.csv  cold_spot_09.csv  cold_spot_10.csv
samples/combustion_dynamics/: comb_dyn_01.csv  comb_dyn_02.csv  (+8 more)
scripts/: generate_scenario_csvs.py  publish_wiki.ps1
src/: __init__.py  analysis.py  bridge.py  compat.py  device.py  download.py  evidence_plots.py  gui_app.py  llama_cli_backend.py  models.py  tools.py  tui_app.py  ui_launch.py  utils.py
tests/: __init__.py  test_analysis.py  test_classifier_head.py  test_device.py  test_download.py  test_evidence_plots.py  test_model_runtime.py  test_rag.py  test_tui.py  test_ui_swap.py
tui_ratatui/: Cargo.toml  README.md
tui_ratatui/src/: main.rs
(+5 files in other folders)
