[package]
name = "gt_harness_ratatui"
version = "0.1.0"
edition = "2021"
description = "Interchangeable ratatui frontend for GT Diagnostic Harness (Python engine)"
license = "MIT"
publish = false

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
